--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+  
 }
 
 repositories {
@@ -22,6 +23,8 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
+    implementation "org.hibernate:hibernate-core:6.0.2.Final"
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.2'
 }
 
 application {
